# pyreason

./: .gitignore  .numba_config.yaml  .pre-commit-config.yaml  .pre-commit-config.yaml .y  .readthedocs.yaml  AFNetDiffFact.py  AbstractAgregationFunction.py  AbstractInfluenceFunction.py  Average.py  CFNetDiffFactRedLabels.py  ELocalLabel.py  EnhancedTipping.py  GlobalLabel.py  LICENSE.md  Label.py  MANIFEST.in  Makefile  NLocalLabel.py  NetCompTarget.py  NetDiffEdge.py  NetDiffGlobalRule.py  NetDiffGraph.py  NetDiffGraphElement.py  NetDiffInterpretation.py  NetDiffLocalRule.py  NetDiffNode.py  NetDiffProgram.py  NetDiffWorld.py  NetInterpretation.py  NetworkAtom.py  README.md  RESULTS.md  TESTING.md  Tipping.py  anyBurl_multistep_multirule.py  apply_slow_markers.py  check_variable_names.py  contributing.md  debug.py  debug_both_versions_transitive.py  (+48 more)
ai_docs/: BUG_LOG.md  BUG_LOG_2.md  GLOSSARY.md  GROUND_RULE_ANALYSIS.md  INTERPRETATION_SECTION_BY_SECTION.md  LAYER_8_COMPREHENSIVE_EXAMPLE.md  LAYER_9_COMPREHENSIVE_EXAMPLE.md  PUBLIC_API.md  REASON_ANALYSIS.md
anyBurl_logs/: yago_1200_9_100_ann_1_1_20240703-175818.txt  yago_1200_9_100_ann_1_1_20240703-175909.txt  yago_1200_9_100_ann_1_1_20240703-175954.txt
anyBurl_rules/: umls_1200_9_25_16ann.txt  umls_1200_9_25_ann.txt  umls_1200_9_50_ann.txt  yago_1200_99_100_ann.txt  yago_1200_9_100_16ann.txt  yago_1200_9_100_16ann_new.txt  yago_1200_9_100_ann.txt
anyburl_subrules/: subrule_yago_1200_9_100_ann_1_1_20240703-175954.txt  subrule_yago_1200_9_100_ann_8_8_20240703-172034.txt
docs/: advanced_graph.ipynb  group-chat-example.md  hello-world.md  hello-world.py  inconsistency_example.py  pyreason_cmd_line.md  pyreason_library.md  (+2 more)
(+351 files in other folders)
