[metadata]
name = pyreason
version = 0.0.2
author = Dyuman Aditya
author_email = dyuman.aditya@gmail.com
description = An explainable inference software supporting annotated, real valued, graph based and temporal logic
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
url = https://github.com/lab-v2/pyreason
license = BSD 3-clause
project_urls =
    Bug Tracker = https://github.com/lab-v2/pyreason/issues
    repository = https://github.com/lab-v2/pyreason
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >3.6
install_requires = 
    networkx
    pyyaml
    pandas
    numba
    numpy
    memory_profiler